<resources>
    <string translatable="false" name="app_name">Cache Cleaner</string>
    <string translatable="false" name="service_name">Cache Cleaner</string>
    <string translatable="false" name="tile_name">Cache Cleaner</string>
    <string translatable="false" name="text_enable_accessibility_title">Enable Accessibility Service</string>
    <string translatable="false" name="text_enable_accessibility_message">
        To functional properly, <b>Cache Cleaner</b> needs your permission.
        Go to Settings to allow permission for <b>Accessibility</b>.
        \n\n
        1. Go to <b>Accessibility</b> in Settings.
        \n
        2. Find <b>Cache Cleaner</b> and tap on it.
        \n
        3. Grant permission.
        \n\n
        <u><b>Accessibility services declaration:</b></u>
        \n
        - This application requires the Accessibility Services API to implement its core functions, such as performing clicks, swipes and other core functions.
        \n
        - The Accessibility permission is required for Android 6 and above.
        \n
        - This application does not collect and/or share personal or sensitive data using the Accessibility capabilities.
    </string>
    <string translatable="false" name="text_enable_accessibility_message_api33">
        To functional properly, <b>Cache Cleaner</b> needs your permission.
        Go to Settings to allow permission for <b>Accessibility</b>.
        \n\n
        1. Go to <b>Accessibility</b> in Settings.
        \n
        2. Find <b>Cache Cleaner</b> and tap on it.
        \n
        3. Grant permission.
        \n\n
        <u><b>Accessibility services declaration:</b></u>
        \n
        - This application requires the Accessibility Services API to implement its core functions, such as performing clicks, swipes and other core functions.
        \n
        - The Accessibility permission is required for Android 6 and above.
        \n
        - This application does not collect and/or share personal or sensitive data using the Accessibility capabilities.
        \n\n
        <u><b>Allow restricted settings:</b></u>
        \n
        - Since Android 13 Accessibility APIs is restricted for 3rd party apps. Please read the
        <b>Warning ⚠️</b> paragraph in the <b>Help</b> menu.
    </string>
    <string translatable="false" name="text_accessibility_description">
        "Cache Cleaner" requires the Accessibility Services API to implement its core functions, such as performing clicks, swipes and other core functions.
        "Cache Cleaner" does not collect and/or share personal or sensitive data using the Accessibility capabilities.
    </string>
    <string translatable="false" name="text_enable_usage_stats_title">Enable Usage Stats</string>
    <string translatable="false" name="text_enable_usage_stats_message">
        To functional properly, <b>Cache Cleaner</b> needs your permission. Go to Settings to allow permission for Usage Stats.
        \n\n
        1. Go to <b>Apps</b> in Settings.
        \n
        2. Find <b>Special app access</b> and tap on it.
        \n
        3. Find <b>Usage access</b> and tap on it.
        \n
        4. Find <b>Cache Cleaner</b> and tap on it.
        \n
        5. Grant permission.
        \n\n
        <u><b>Usage stats declaration:</b></u>
        \n
        - This application requires the Usage stats to implement its core function, such as get cache size of installed applications.
        \n
        - The Usage stats permission is required for Android 8 and above.
        \n
        - This application does not collect and/or share personal or sensitive data using the Usage stats.
    </string>
    <string translatable="false" name="text_clean_cache_left">left apps</string>
    <string translatable="false" name="text_clean_cache_finish">Clean cache was finished</string>
    <string translatable="false" name="text_clean_cache_finish_display_size">Clean cache was finished\nCleaned up %1$s</string>
    <string translatable="false" name="text_clean_cache_finish_processing">Clean cache was finished\nProcessing…</string>
    <string translatable="false" name="text_clean_cache_interrupt">Clean cache was interrupted</string>
    <string translatable="false" name="text_clean_cache_interrupt_display_size">Clean cache was interrupted\nCleaned up %1$s</string>
    <string translatable="false" name="text_clean_cache_interrupt_processing">Clean cache was interrupted\nProcessing…</string>
    <string translatable="false" name="btn_open_accessibility">Open Accessibility Settings</string>
    <string translatable="false" name="btn_open_usage_stats">Open Usage Stats Settings</string>
    <string translatable="false" name="btn_clean_all_cache">Clean cache of all apps</string>
    <string translatable="false" name="btn_clean_system_cache">Clean cache of system apps</string>
    <string translatable="false" name="btn_clean_user_cache">Clean cache of user apps</string>
    <string translatable="false" name="btn_close_app">Close app</string>
    <string translatable="false" name="btn_start_accessibility_service">Start Accessibility service</string>
    <string translatable="false" name="btn_stop_accessibility_service">Stop Accessibility service</string>
    <string translatable="false" name="btn_add_extra_search_text">Add extra search text</string>
    <string translatable="false" name="description_apps_all_check">Check all apps</string>
    <string translatable="false" name="description_apps_all_uncheck">Uncheck all apps</string>
    <string translatable="false" name="text_cache_size_fmt">Cache: %1$s</string>
    <string translatable="false" name="toast_package_list_item_long_click">Hold the app icon to launch &lt;App Info&gt;</string>
    <string translatable="false" name="text_list_ignored_apps">Ignored apps</string>
    <string translatable="false" name="dialog_extra_search_text_title">Add extra search text</string>
    <string translatable="false" name="dialog_extra_search_text_message">%1$s (%2$s)\ninstead of \"%3$s\"</string>
    <string translatable="false" name="dialog_extra_search_text_btn_ok">OK</string>
    <string translatable="false" name="dialog_extra_search_text_btn_remove">Remove</string>
    <string translatable="false" name="dialog_filter_min_cache_size_title">Filter by cache size</string>
    <string translatable="false" name="dialog_filter_min_cache_size_message">Enter the min. cache size for application filtering (KB,MB,GB,TB)</string>
    <string translatable="false" name="toast_error_filter_min_cache_size">Please enter min. cache size in KB,MB,GB,TB OR 0 to reset default</string>
    <string translatable="false" name="dialog_ignore_app_title">Ignore app</string>
    <string translatable="false" name="dialog_ignore_app_messages"><![CDATA[
        <b>Cache Cleaner</b> was interrupted by the Android System while cleaning the <b>%s</b> app.
        Would you like to add this app to the list of ignored apps to prevent it from being included in future cleaning processes?
        You can always remove this app from the list of ignored apps in the Settings.
    ]]></string>
    <string translatable="false" name="first_boot_title">Please read before using</string>
    <string translatable="false" name="first_boot_intro_googleplay"><![CDATA[
        <h2>Welcome to <b>Cache Cleaner</b>: Free, Open-Source, No Ads</h2>
        <br/>
        Born from frustration with paid apps and ad-heavy alternatives,
        <b>Cache Cleaner</b> is my way of offering a simpler, more transparent solution.
        It is a free, open-source app, created by me in my spare time,
        dedicated to improving your phone is performance without the hassle of ads.
        <br/>
        <br/>
        <h3>Google Policy and Checkboxes</h3>
        <br/>
        The checkboxes you see below are not just a formality; they are crucial for complying with Google Policy.
        This step helps prevent app suspension due to negative reviews and ensures a clear, honest user experience.
        <br/>
        <br/>
        <h3>Open Source, Open Mind</h3>
        <br/>
        Thinking of labeling <b>Cache Cleaner</b> as <b>malicious</b> without peeking at the source code?
        Hold that thought! It is all there on <a href="https://github.com/bmx666/android-appcachecleaner/">GitHub</a>.
        Transparency is the most important thing.
        <br/>
        <br/>
        <h3>Solo Development, Limited Resources</h3>
        <br/>
        As the sole developer, I face the challenge of limited testing capabilities, having access to only a few phone models.
        Your feedback and bug reports on <a href="https://github.com/bmx666/android-appcachecleaner/issues/">GitHub</a>
        are invaluable for enhancing the app is functionality across different devices.
        <br/>
        Your contributions and suggestions are more than welcome.
        They are essential in making <b>Cache Cleaner</b> a tool that works well for a diverse range of users.
        Thank you for helping to make the open source world a better place.
    ]]></string>
    <string translatable="false" name="first_boot_message"><![CDATA[
        <h2>Customized Settings UI</h2>
        <br/>
        Many companies or Android ROMs add or change default Android UI, including Settings.
        This can cause an issue because the <b>Cache Cleaner</b> app is looking for specific text
        and if it does not match, the app does nothing.
    ]]></string>
    <string translatable="false" name="first_boot_confirm_1">
        I confirm that I will read the chapter <b>Customized Settings UI</b> in the <b>Help</b> menu,
        before performing any actions with the <b>Cache Cleaner</b> app.
    </string>
    <string translatable="false" name="first_boot_confirm_2">
        I confirm that if the <b>Cache Cleaner</b> does not perform any actions,
        I will undertake the actions described in the <b>Help</b> menu in the chapter <b>Customized Settings UI</b>,
        related to setting alternative text for searching the <b>Storage and Cache</b> or <b>Storage</b> menu,
        as well as setting alternative text for searching the <b>Clear Cache</b> button.
    </string>
    <string translatable="false" name="first_boot_confirm_3">
        I confirm that if the <b>Cache Cleaner</b> does not perform any actions,
        I will change the cache clearing scenario in the <b>Settings</b> from the <b>Default</b> scenario
        to the <b>Xiaomi MIUI</b> scenario if my phone is a <b>Xiaomi with specific regional MIUI firmware</b>.
    </string>
    <string translatable="false" name="first_boot_confirm_4">
        I confirm that if the <b>Cache Cleaner</b> does not perform any of the above-described actions,
        I am obligated to report my problem at the address specified in the chapter
        <b>Submit a bug report</b> in the <b>Help</b> menu.
    </string>
    <string translatable="false" name="first_boot_confirm_googleplay_1">
        I confirm that if the <b>Cache Cleaner</b> does not perform any of the above-described actions,
        and after reporting my issue at the address specified in the chapter
        <b>Submit a bug report</b> in the <b>Help</b> menu, I do not receive any support from the author,
        I can file a complaint through GooglePlay against the <b>Cache Cleaner</b> app,
        as an application that misleads users.
    </string>
    <string translatable="false" name="prefs_show_extra_buttons">Show extra buttons</string>
    <string translatable="false" name="prefs_summary_show_button_start_stop_service">For some smartphones, you need to manually start or stop the accessibility service</string>
    <string translatable="false" name="prefs_summary_show_button_close_app">For some smartphones, you need to manually stop the accessibility service and close the app</string>
    <string name="clear_cache_btn_text">Clear cache</string>
    <string name="storage_settings_for_app" >Storage &amp; cache</string>
</resources>