<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppCacheCleanerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCacheCleaner.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AppCacheCleaner.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_enable_accessibility"/>
        <Button
            android:id="@+id/btnOpenAccessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_open_accessibility"/>
        <Button
            android:id="@+id/btnCleanUserAppCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clean_user_cache"/>
        <Button
            android:id="@+id/btnCleanSystemAppCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clean_system_cache"/>
        <Button
            android:id="@+id/btnCleanAllAppCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clean_all_cache"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>