<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FirstBootActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCacheCleaner.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AppCacheCleaner.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_boot_message"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/textConfirm1"
                android:checked="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_boot_confirm_1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/textConfirm2"
                android:enabled="false"
                android:checked="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_boot_confirm_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/textConfirm3"
                android:enabled="false"
                android:checked="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_boot_confirm_3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/textConfirm4"
                android:enabled="false"
                android:checked="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_boot_confirm_4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/cancel"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnOk"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/ok"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>